correction report complete

--- a/checks/templates/checks/control_event_create.html
+++ b/checks/templates/checks/control_event_create.html
@@ -8,3 +8,4 @@
         <button type="reset">Отменить</button>
             </form>
 {% endblock %}
+render(request, template_name='checks/correction_report.html')
