--- a/checks/templates/checks/index.html
+++ b/checks/templates/checks/index.html
@@ -4,11 +4,11 @@
 
 <html lang='ru'>
 	<head>
-	    <link href="{% static "/css/style.css" %}" rel="stylesheet">
+	    <link href="{% static "/css/style.css" %}?v=1" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300&display=swap" rel="stylesheet">
-        <title>{{title}}</title>
+        <title>Главная</title>
 	</head>
 	<body>
         {% block head %}
@@ -40,20 +40,34 @@
         <div class="wrap">
             <main>
                 {% block main %}
+                
                 <h1 class="main-header">Отчёты и сводные таблицы</h1>
-                <div class="main-report">
-                    <h2 class="main-report__title">Отчёт о проведенных проверках за период</h2>
-                    <form action="/report/" method="get" class="main-report-form">
-                        <label for="start_date">Начальная дата:
-                            <input id="start_date" type="date" name="start_date" required>
-                        </label>
-                        <label for="finish_date">Конечная дата:
-                            <input id="finish_date" type="date" name="finish_date" required>
-                        </label>
-                        <input id="submit" type="submit" value="ОК">
-                    </form>
+                <div class="main-report-container">
+                    <div class="main-report">
+                        <h2 class="main-report__title">Отчёт о проведенных проверках за период</h2>
+                        <form action="/report/" method="get" class="main-report-form">
+                            <label for="start_date">Начальная дата:
+                                <input id="start_date" type="date" name="start_date" required>
+                            </label>
+                            <label for="finish_date">Конечная дата:
+                                <input id="finish_date" type="date" name="finish_date" required>
+                            </label>
+                            <input id="submit" type="submit" value="ОК">
+                        </form>
+                    </div>
+                    <div class="main-report">
+                        <h2 class="main-report__title">Статистика по нарушениям</h2>
+                        <form action="/breach_statistics/" method="get" class="main-report-form">
+                            <label for="start_date">Начальная дата:
+                                <input id="start_date" type="date" name="start_date" required>
+                            </label>
+                            <label for="finish_date">Конечная дата:
+                                <input id="finish_date" type="date" name="finish_date" required>
+                            </label>
+                            <input id="submit" type="submit" value="ОК">
+                        </form>
+                    </div>
                 </div>
-                <script src="{% static "/js/index.js" %}"></script>
                 {% endblock %}
             </main>
             <aside class="right_column">
