report checking template created

--- a/checks/templates/checks/index.html
+++ b/checks/templates/checks/index.html
@@ -67,6 +67,12 @@
                             <input id="submit" type="submit" value="ОК">
                         </form>
                     </div>
+                    <div class="main-report">
+                        <h2 class="main-report__title hide">Информация<br> о не предсталенных отчётах<br> об устранении нарушений</h2>
+                        <form action="" method="get" class="main-report-form">
+                            <input id="submit" class="ok" type="submit" value="ОК">
+                        </form>
+                    </div>
                 </div>
                 {% endblock %}
             </main>
