download_report_not_submited complete

--- a/checks/templates/checks/index.html
+++ b/checks/templates/checks/index.html
@@ -68,8 +68,8 @@
                         </form>
                     </div>
                     <div class="main-report">
-                        <h2 class="main-report__title hide">Информация<br> о не предсталенных отчётах<br> об устранении нарушений</h2>
-                        <form action="" method="get" class="main-report-form">
+                        <h2 class="main-report__title">Информация<br> о не закрытых отчётах<br> об устранении нарушений</h2>
+                        <form action="/report_checking/report_not_submited/" method="get" class="main-report-form">
                             <input id="submit" class="ok" type="submit" value="ОК">
                         </form>
                     </div>
