--- a/checks/templates/checks/index.html
+++ b/checks/templates/checks/index.html
@@ -4,7 +4,7 @@
 
 <html lang='ru'>
 	<head>
-	    <link href="{% static "/css/style.css" %}?v=1" rel="stylesheet">
+	    <link href="{% static "/css/style.css" %}?v=25052022" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300&display=swap" rel="stylesheet">
