--- a/static/css/style.css
+++ b/static/css/style.css
@@ -244,12 +244,11 @@ label {
 }
 
 .content_list__item__delete {
-                            text-align: right;
-                            position: absolute;
-                            display: inline-block;
-                            /* width: 430px; */
-                            right: 30px;
-                            }
+    text-align: right;
+    position: absolute;
+    display: inline-block;
+    right: 30px;
+}
 
 .add_item {
             font-size: 20px;
@@ -257,11 +256,19 @@ label {
             padding: 10px}
 
 .create__location {
-                   font-size: 30px;
-                   text-align: left;
-                   display: block;
-                   width: 400px;
-                   }
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 15vh;
+    margin: auto;
+    padding: 20px;
+    font-size: 30px;
+    text-align: left;
+    width: 400px;
+    background-color: #f2f5f2;
+}
 
 .errorlist {
     font-size: 15px;
@@ -559,6 +566,9 @@ ul {
     padding: 20px;
     border: 2px solid #769276;
     border-radius: 10px;
+    font-size: inherit;
+    color: inherit;
+    font-family: inherit;
 }
 
 .correction_report_comments_form__submit {
@@ -581,7 +591,7 @@ ul {
     height: 40px;
 }
 
-.autorirization {
+.authorization {
     position: fixed;
     top: 0;
     bottom: 0;
