--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,7 +3,7 @@
 
 {% load static %}
 {% block main %}
-<div class="autorirization">
+<div class="authorization">
   <div class="authorization-form">
     <form method="post" action="{% url 'login' %}">
       {% csrf_token %}
