--- a/checks/templates/checks/create_object.html
+++ b/checks/templates/checks/create_object.html
@@ -2,9 +2,10 @@
 {% extends "checks/index.html" %}
 {% load static %}
 {% block main %}
-            <form class="create__location" action="{% url 'object-create' %}" method="post">{% csrf_token %}
-                    {{ form }}<br>
-        <input type="submit" value="Добавить">
-        <button type="reset">Отменить</button>
-            </form>
+<div class="authorization">
+    <form class="create__location" action="{% url 'object-create' %}" method="post">{% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Добавить">
+    </form>
+</div>
 {% endblock %}
