--- a/checks/templates/checks/check_list.html
+++ b/checks/templates/checks/check_list.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
         {% endfor %}
-            <input type="submit" value="Добавить">
+            <input class="form_submit_btn check-list-submit-btn" type="submit" value="Добавить">
         </form>
     </div>   
 </body>
