--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,15 +8,15 @@
     <form method="post" action="{% url 'login' %}">
       {% csrf_token %}
       <div class="authorization-form__container">
-        <h1 class="authorization-form__header">Пожалуйста, авторизуйтесь</h1>
+        <h1 class="form-title">Пожалуйста, авторизуйтесь</h1>
         <div>{{ form.username }}</div>
         <div>{{ form.password }}</div>
       </div>
       <input class="form_submit_btn" type="submit" value="Войти"/>
       <input type="hidden" name="next" value="{{ next }}"/>
-      <a href="" class="authorization-form__close">x</a>
+      <a href="" class="form-close">x</a>
     </form>
   </div>
 </div>
-<script src="../../static/js/autorizationForm.js"></script>
+<script src="{% static "/js/authorizationForm.js" %}?v=07062022"></script>
 {% endblock %}
