--- a/static/css/style.css
+++ b/static/css/style.css
@@ -104,7 +104,7 @@ input[type='radio'] {
 
 a {
     text-decoration: none;
-    color: black;
+    color: #425342;
 }
 
 a:hover {
@@ -155,6 +155,10 @@ color: black;
     font-weight: normal;
     cursor: pointer;
     border-radius: 10px;
+}
+
+.main-report-form > #submit:hover {
+    background-color: #4c694c;
 }
 
 #start_date, #finish_date {
@@ -726,4 +730,32 @@ input[type='radio'] {
 .check-list-submit-btn {
     width: 150px;
     align-self: end;
+}
+
+.check-me-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.check-me-item {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 20px;
+    background-color: antiquewhite;
+}
+
+.check-me-item__name {
+    font-weight: bold;
+}
+
+.check-me-item__location {
+    font-size: 15px;
+}
+
+.check-me-item:hover {
+    padding: 15px;
+    margin: 5px;
+    color: #425342;
 }
