--- a/checks/templates/checks/object_page.html
+++ b/checks/templates/checks/object_page.html
@@ -3,17 +3,49 @@
 {% extends "checks/index.html" %}
 {% load static %}
 {% block main %}
-<h1>{{ object.name }} ({{object.location}})</h1>
-<h2>Общая информация</h2>
-Количество проверок на объекте: {{information.count_control_events}}<br>
-Количество проверок в текущем году: {{information.count_control_events_in_the_year}}<br>
-Количество проверок с неудовлетворительным результатом: {{information.count_negative_control_events}}<br>
-Средний балл: {{information.average_score}}<br>
-Средний балл в текущем году: {{information.average_score_in_the_year}}<br>
-<h2>Список проверок:</h2>
-<ul>
-{% for i in information.control_events_list%}
-    <li><a href="{% url 'control-event' i.control_event_id %}">{{i.date}} - {{i.score}}</a>
-{% endfor %}
-</ul>
+<h1 class="object_header">
+  <span class="object_header__name">{{ object.name }}</span>
+  <span class="object_header__location">{{ object.location }}</span>
+</h1>
+<section class="object_main_information">
+	<h3>Общая информация</h3>
+  <div class="object_main_information__item">
+		<div class="object_main_information__item__name">Количество проверок на объекте</div>
+		<div class="object_main_information__item__value">{{ information.count_control_events }}</div>
+	</div>
+  <div class="object_main_information__item">
+		<div class="object_main_information__item__name">Количество проверок в текущем году</div>
+		<div class="object_main_information__item__value">{{ information.count_control_events_in_the_year }}</div>
+	</div>
+	<div class="object_main_information__item">
+		<div class="object_main_information__item__name">Количество проверок с неудовлетворительным результатом</div>
+		<div class="object_main_information__item__value">{{ information.count_negative_control_events }}</div>
+	</div>
+	<div class="object_main_information__item">
+		<div class="object_main_information__item__name">Средний балл</div>
+		<div class="object_main_information__item__value">{{ information.average_score }}</div>
+	</div>
+	<div class="object_main_information__item">
+		<div class="object_main_information__item__name">Средний балл в текущем году</div>
+		<div class="object_main_information__item__value">{{ information.average_score_in_the_year }}</div>
+	</div>
+</section>
+<div class="diagram">
+	<h4>Динамика результатов проверок объекта</h4>
+	<div class="diagram_content">
+		<div class="diagram__left_side">
+			{% for i in information.control_events_list%}
+			<div class="diagram__date">{{ i.date|date:'d.m.Y' }}</div>
+			{% endfor %}
+		</div>
+		<div class="diagram__right_side">
+			{% for i in information.control_events_list%}
+			<a href="{% url 'control-event' i.control_event_id %}" class="diagram__item" score="{{ i.score }}">
+				<div class="diagram__item__value">{{ i.score }}</div>
+			</a>
+			{% endfor %}
+		</div>
+	</div>
+</div>
+<script src="{% static "/js/objectPage.js" %}?v=1"></script>
 {% endblock %}
