--- a/static/css/object_page.css
+++ b/static/css/object_page.css
@@ -60,8 +60,8 @@
     height: 40px;
 }
 
-.diagram__item:hover {
-    background-color: black;
+.hover {
+    background-color: rgb(194, 143, 143) !important;
 }
 
 .diagram__item__value {
