create rating view

--- a/checks/templates/checks/index.html
+++ b/checks/templates/checks/index.html
@@ -90,6 +90,19 @@
                             <input id="submit" type="submit" value="ОК">
                         </form>
                     </div>
+                    <div class="main-report">
+                        <h2 class="main-report__title">Рейтинг<br> 
+                        муниципалитетов</h2>
+                        <form action="rating/" method="get" class="main-report-form">
+                            <label for="start_date">Начальная дата:
+                                <input id="start_date" type="date" name="start_date" required>
+                            </label>
+                            <label for="finish_date">Конечная дата:
+                                <input id="finish_date" type="date" name="finish_date" required>
+                            </label>
+                            <input id="submit" type="submit" value="ОК">
+                        </form>
+                    </div>
                 </div>
                 <h1 class="main-header">Проверь меня &#129306</h1>
                 <div class="check-me-container">
