create reting table

--- a/checks/templates/checks/index.html
+++ b/checks/templates/checks/index.html
@@ -93,7 +93,7 @@
                     <div class="main-report">
                         <h2 class="main-report__title">Рейтинг<br> 
                         муниципалитетов</h2>
-                        <form action="rating/" method="get" class="main-report-form">
+                        <form action="rating/" method="get" class="main-report-form" target="_blank">
                             <label for="start_date">Начальная дата:
                                 <input id="start_date" type="date" name="start_date" required>
                             </label>
