create link to download rating

--- a/checks/templates/checks/rating.html
+++ b/checks/templates/checks/rating.html
@@ -34,5 +34,10 @@
         {% endfor %}
         </tbody>
     </table>
+    
+    <a href="#">
+        <i class="fa-solid fa-download download-icon"></i>
+    </a>
+    <script src="https://kit.fontawesome.com/d8dec79184.js" crossorigin="anonymous"></script>
 </body>
 </html>
