--- a/checks/templates/checks/rating.html
+++ b/checks/templates/checks/rating.html
@@ -35,7 +35,7 @@
         </tbody>
     </table>
     
-    <a href="#">
+    <a href="{% url 'download_rating' %}?start_date={{ start_date }}&finish_date={{ finish_date }}">
         <i class="fa-solid fa-download download-icon"></i>
     </a>
     <script src="https://kit.fontawesome.com/d8dec79184.js" crossorigin="anonymous"></script>
