--- a/checks/templates/checks/rating.html
+++ b/checks/templates/checks/rating.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     <h1 class="table-title">Рейтинг муниципалитетов</h1>
-    <table>
+    <div class="table-subtitle">{{ start_date|date:'d.m.Y' }} - {{ finish_date|date:'d.m.Y' }}</div>
+    <table> 
         <thead>
             <tr>
                 <th>Место</th>
