--- a/static/css/rating.css
+++ b/static/css/rating.css
@@ -53,3 +53,8 @@ tbody > tr:nth-child(odd) {
 
     transition: all 100ms;
 }
+
+.table-subtitle {
+    text-align: center;
+    margin-bottom: 50px;
+}
